--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,4 @@
+/* Todo List */
 .title {
     margin: 50px auto;
     text-align: center;
@@ -14,6 +15,10 @@
 .new-work-form {
     margin: 0 auto 30px;
     width: 80%;
+}
+
+.works {
+    margin-bottom: 50px;
 }
 
 .works-table {
@@ -56,4 +61,29 @@
 
 .cell-input, .cell-save-discard {
     display: none;
+}
+
+/* Calendar */
+.calendar-html, .calendar-body {
+    overflow: hidden; /* don't do scrollbars */
+    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+    font-size: 14px;
+}
+
+#calendar-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.fc-header-toolbar {
+    /*
+    the calendar will be butting up against the edges,
+    but let's scoot in the header's buttons
+    */
+    padding-top: 1em;
+    padding-left: 1em;
+    padding-right: 1em;
 }
